Fix type error in listing-card description class; remove margins and gaps in columns and header

--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -76,16 +76,19 @@ header h1 {
 }
 
 .user-greeting {
+    display: flex;
+    align-items: center;   /* centra verticalmente */
+    justify-content: center; /* opcional: centra horizontalmente */
+    
     background-color: #800080;
-    text-align: center;
     width: 100%;
+    height: 1.999vw;
     color: white;
     padding: 0.5rem;
     border-radius: 0.25rem;
     margin: 0;
     font-size: 1.333vw;
 }
-
 .nav {
     display: flex;
     flex-wrap: nowrap;
@@ -164,7 +167,7 @@ header h1 {
     justify-content: center;
     border-radius: 4px;
     background-color: white;
-    padding: 30px;
+    padding: 1.999vw 1.999vw 1.999vw 1.999vw;
 
     border: 0px solid orange;
 }
@@ -183,14 +186,18 @@ header h1 {
     font-weight: 600;
     overflow: hidden;    /* oculta el texto que sobrepasa la altura */
     text-overflow: ellipsis; /* opcional, agrega "..." si se corta el texto */
+
+    border: 0px solid white;
 }
 
-.index-lisitngs-description {
+.index-listings-description {
     display: -webkit-box;
-    font-weight: 100;
+    font-weight: 200;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 3; /* cantidad de líneas visibles */
     overflow: hidden;
+
+    border: 0px solid lightblue;
 }
 
 .clase-justificada {
@@ -202,6 +209,9 @@ header h1 {
 .listing-price {
 
     font-weight: 600;
+    padding: 1.333vw 0 0 0;
+    margin: 0 0 0 0;
+    border: 0px solid lightblue;
 }
 
 .index-listings:hover {
@@ -235,11 +245,11 @@ header h1 {
 .listing-detail-grid {
     display: grid;
     grid-template-columns: 2fr 1fr;
-    gap: 15px;
-    margin: 15px;
-    padding: 15px;
+    gap: 1.999vw;
+    margin: 1.999vw;
+    padding: 1.999vw;
     box-sizing: border-box;
-    border-radius: 16px;
+    border-radius: .999vw;
     border: .333vw solid lightpink;
 }
 
@@ -254,7 +264,7 @@ header h1 {
 }
 
 .listing-detail-text {
-    padding: 15px;
+    padding: .999vw;
 }
 
 .underline {
